--- a/problem2/problem2.ipynb
+++ b/problem2/problem2.ipynb
@@ -4,19 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## __Problem2__"
+    "## [__Problem2__](https://leetcode.com/problems/jump-game-ii/description/?envType=study-plan-v2&envId=top-interview-150)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
