problem3 in 3 different languages

--- a/problem2/problem2.ipynb
+++ b/problem2/problem2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [__Problem2__](https://leetcode.com/problems/jump-game-ii/description/?envType=study-plan-v2&envId=top-interview-150)"
+    "## [__Problem2__](https://leetcode.com/problems/jump-game-ii/description/?envType=study-plan-v2&envId=top-interview-150) - Jump Game II"
    ]
   },
   {
